sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:4: error: not enough arguments for method getValeur: (x$1: Int)Int.
Unspecified value parameter x$1.
  for (i<- (getValeur()-2) to 0) {
                     ^